--- a/pom.xml
+++ b/pom.xml
@@ -123,11 +123,11 @@
 			<version>2.5.0</version>
 		</dependency>
 		<!-- jackson json 优化缓存对象序列化 -->
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.9.6</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.fasterxml.jackson.core</groupId>-->
+			<!--<artifactId>jackson-databind</artifactId>-->
+			<!--<version>2.9.6</version>-->
+		<!--</dependency>-->
 	</dependencies>
 
 	<build>
